# ts-protoc-gen

./: .bazelrc  .flowconfig  .gitattributes  .gitignore  .npmignore  .travis.yml  BUILD  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Jenkinsfile  OWNERS  README.md  WORKSPACE  babel.config.js  build.py  defs.bzl  generate.js  generate.sh  generate.ts  install-protobuf.sh  jest.config.ts  mocha-run-suite.sh  package-lock.json  package.json  release.sh  travis-ci-build.sh  tsconfig.json  tslint.json
.github/: stale.yml
.github/actions/npm-install-build-and-cache/: action.yaml
.github/actions/retrieve-deps-and-build/: action.yaml
.github/workflows/: main.yaml  pr.yaml
envs/client/: deployment.vars
examples/: build.sh
examples/examplecom/common/: names.proto
examples/examplecom/services/complextypes/: complextypes.proto
examples/examplecom/services/ping/: ping.proto
examples/flow/: .flowconfig  package-lock.json  package.json
examples/generated-grpc-js-node/proto/: orphan_grpc_pb.d.ts  orphan_grpc_pb.js
examples/generated-grpc-js-node/proto/examplecom/: casing_pb.js  extensions_pb.d.ts  getter_name_pb.d.ts  parent_message_v2_pb.d.ts  parent_message_v2_pb.js  parent_message_v3_pb.d.ts  parent_message_v3_pb.js  primitive_message_v3_pb.js  repeated_primitive_message_pb.d.ts  reserved_words_pb.d.ts  simple_pb.js  simple_service_grpc_pb.d.ts  simple_service_grpc_pb.js  simplevalue_pb.js  well_known_message_pb.js
examples/generated-grpc-js-node/proto/othercom/: external_child_message_pb.d.ts
examples/generated-grpc-native/proto/: orphan_pb.js  orphan_pb_service.d.ts  orphan_pb_service.js
examples/generated-grpc-native/proto/examplecom/: casing_pb.d.ts  casing_pb.js  (+23 more)
examples/generated-grpc-node/proto/: orphan_grpc_pb.d.ts  orphan_grpc_pb.js  orphan_pb.d.ts  orphan_pb.js
examples/generated-grpc-web/proto/: orphan_pb.d.ts  orphan_pb_service.d.ts  orphan_pb_service.js
flow-typed/npm/: chai_v3.5.x.js
lib/: ExportMap.d.ts  ExportMap.js  ExportMap.js.map  Printer.js.map  js_service_index.js  js_service_index.js.map  ts_index.js  ts_index.js.map  util.d.ts  util.js  util.js.map
lib/js/: fileDescriptorJSServices.d.ts  fileDescriptorJSServices.js  fileDescriptorJSServices.js.map
lib/ts/: FieldTypes.d.ts  FieldTypes.js  FieldTypes.js.map  enum.js  enum.js.map  extensions.js  extensions.js.map  fileDescriptorTSD.js  fileDescriptorTSD.js.map  fileDescriptorTSServices.d.ts  fileDescriptorTSServices.js  fileDescriptorTSServices.js.map  message.d.ts  message.js  message.js.map  oneof.js  oneof.js.map
proto/: BUILD  BUILD.bazel
proto/examplecom/: BUILD  BUILD.bazel  annotations.proto  getter_name.proto  oneof_message.proto  parent_message_v2.proto  parent_message_v3.proto  primitive_message_v3.proto  simple_service.proto
proto/issues/150/: position_info.proto  position_point.proto  report.proto
proto/othercom/: BUILD.bazel
protodefs/: codegen.sh  file.js
protodefs/google/protobuf/: descriptor_pb.js
src/: BUILD  BUILD.bazel  CodePrinter.ts  Dockerfile  ExportMap.ts  FieldTypes.ts  Printer.ts  WellKnown.ts  enum.ts  extensions.ts  index.ts  js_service_index.ts  message.ts  oneof.ts  parameters.ts  processFileDescriptor.ts  ts_index.ts  util.ts
src/bazel/: BUILD.bazel  change_import_style.ts  convert_to_amd.ts
src/flow/: FieldTypes.ts  enum.ts  extensions.ts  fileDescriptorFlow.ts  message.ts  oneof.ts
src/generator/: generator.js
src/js/: fileDescriptorJSServices.ts
src/service/: common.ts  grpcnative.ts  grpcnode.ts  grpcweb.ts
src/ts/: CommentsMap.ts  FieldTypes.ts  enum.ts  extensions.ts  fileDescriptorPatch.ts  fileDescriptorTSD.ts  fileDescriptorTSServices.ts  message.ts  oneof.ts
test/: enums.ts  generate.sh  maps.ts  mocha-check-report.js  mocha-run-suite.js  mocha-run-suite.sh  mocha-run-suite.ts  nestedMessagesV2.ts  nestedMessagesV3.ts  oneof.ts  orphan.ts  package.json  primitivesV2.ts  primitivesV3.ts  repeatedPrimitives.ts  reservedWords.ts  tsconfig.json  wellKnownTypes.ts
test/bazel/: BUILD.bazel  commonjs_test.spec.ts  external_proto_with_deps_test.spec.ts  pizza_service_proto_test.spec.ts  proto_with_deps_test.spec.ts  require.config.js  test_bundling.ts  test_bundling_tsconfig.json  tsconfig.json
test/bazel/proto/: BUILD.bazel  naming_styles.proto  pizza_service.proto
test/bazel/proto/common/: BUILD.bazel  delivery_person.proto  pizza.proto
test/flow/: mocha-run-suite.sh
test/flow/integration/: annotations.js  enums.js  maps.js  nestedMessagesV2.js  nestedMessagesV3.js  oneof.js  primitivesV2.js  primitivesV3.js  repeatedPrimitives.js  reservedWords.js
test/helpers/: fakeGrpcTransport.ts
test/integration/: annotations.test.ts  annotations.ts  casing.test.ts  casing.ts  enums.test.ts  enums.ts  extensions.test.ts  extensions.ts  getterName.test.ts  getterName.ts  maps.test.ts  maps.ts  nestedMessagesV2.test.ts  nestedMessagesV2.ts  nestedMessagesV3.test.ts  nestedMessagesV3.ts  oneof.test.ts  oneof.ts  orphan.test.ts  orphan.ts  primitivesV2.test.ts  primitivesV2.ts  primitivesV3.test.ts  primitivesV3.ts  repeatedPrimitives.test.ts  repeatedPrimitives.ts  reservedWords.test.ts  reservedWords.ts  wellKnownTypes.test.ts  wellKnownTypes.ts
test/integration/service/: grpcnode.test.ts  grpcnode.ts  grpcweb.test.ts  grpcweb.ts
test/js_test/: generate.sh  package.json
test/js_test/src/: orphan.js  service.js
test/proto/: orphan.proto
test/proto/examplecom/: enum_message.proto  external_child_message.proto  map_message.proto  oneof_message.proto  parent_message_v2.proto  parent_message_v3.proto  primitive_message_v2.proto  primitive_message_v3.proto  simple_service.proto
test/service/: grpcweb.ts
test/src/: enums.ts  maps.ts  nestedMessagesV2.ts  primitivesV2.ts  primitivesV3.ts  wellKnownTypes.ts
test/ts_test/: check-mocha-report.js  generate.sh  package.json  tsconfig.json
test/ts_test/src/: enums.ts  maps.ts  nestedMessagesV2.ts  nestedMessagesV3.ts  oneof.ts  orphan.ts  primitivesV2.ts  primitivesV3.ts  repeatedPrimitives.ts  reservedWords.ts  service.ts  util.ts
test/unit/: util.test.ts  util.ts
(+54 files in other folders)
