load("@npm_bazel_typescript//:defs.bzl", "ts_config")

package(default_visibility = ["//visibility:public"])

exports_files([
    "tsconfig.json",
    "node_modules/google-protobuf/google-protobuf.js",
])

filegroup(
    name = "generate_ts",
    srcs = [
        "//proto:generate",
        "//proto/examplecom:generate",
        "//proto/othercom:generate",
    ],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [],
)
