load("@npm_bazel_typescript//:index.bzl", "ts_config")

package(default_visibility = ["//visibility:public"])

exports_files([
    "tsconfig.json",
])

filegroup(
    name = "generate_ts",
    srcs = [
        "//proto:generate",
        "//proto/examplecom:generate",
        "//proto/othercom:generate",
    ],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [],
)
