package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = glob([
        "*.ts",
        "service/*.ts",
        "ts/*.ts",
    ]),
    node_modules = "@npm//:node_modules",
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types/google-protobuf",
        "@npm//google-protobuf",
    ],
)
