package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:defs.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

nodejs_binary(
    name = "convert_to_amd",
    data = [
        ":convert_to_amd_lib",
    ],
    entry_point = "ts_protoc_gen/src/bazel/convert_to_amd.js",
    node_modules = "@ts_protoc_gen_deps//:node_modules",
)

ts_library(
    name = "convert_to_amd_lib",
    srcs = [
        "convert_to_amd.ts",
    ],
    node_modules = "@ts_protoc_gen_deps//:node_modules",
)
