package(default_visibility = ["//test/bazel:__subpackages__"])

load("//:defs.bzl", "typescript_proto_library")

proto_library(
    name = "naming_styles_proto",
    srcs = [
        "naming_styles.proto",
    ],
)

typescript_proto_library(
    name = "naming_styles_ts_proto",
    proto = ":naming_styles_proto",
)

proto_library(
    name = "pizza_service_proto",
    srcs = [
        "pizza_service.proto",
    ],
    deps = [
        "//test/bazel/proto/common:delivery_person_proto",
        "//test/bazel/proto/common:pizza_proto",
    ],
)

typescript_proto_library(
    name = "pizza_service_ts_proto",
    proto = ":pizza_service_proto",
)
