package(default_visibility = ["//test/bazel:__subpackages__"])

load("//:defs.bzl", "typescript_proto_library")

proto_library(
    name = "delivery_person_proto",
    srcs = [
        "delivery_person.proto",
    ],
    deps = [
        ":pizza_proto",
    ],
)

typescript_proto_library(
    name = "delivery_person_ts_proto",
    proto = ":delivery_person_proto",
)

proto_library(
    name = "pizza_proto",
    srcs = [
        "pizza.proto",
    ],
)

typescript_proto_library(
    name = "pizza_ts_proto",
    proto = ":pizza_proto",
)
